--- a/Delta-version/full_version.ipynb
+++ b/Delta-version/full_version.ipynb
@@ -2,70 +2,39 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\anaconda3\\envs\\tensorflow\\lib\\site-packages\\h5py\\__init__.py:36: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
-      "  from ._conv import register_converters as _register_converters\n",
-      "Using TensorFlow backend.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import keras\n",
+    "import numpy as np\n",
+    "import os\n",
+    "import tensorflow as tf\n",
+    "\n",
+    "from keras import backend as K\n",
     "from keras.applications.inception_resnet_v2 import InceptionResNetV2\n",
     "from keras.preprocessing import image\n",
-    "from keras.engine import Layer\n",
     "from keras.applications.inception_resnet_v2 import preprocess_input\n",
-    "from keras.layers import Conv2D, UpSampling2D, InputLayer, Conv2DTranspose, Input, Reshape, merge, concatenate\n",
-    "from keras.layers import Activation, Dense, Dropout, Flatten\n",
-    "from keras.layers.normalization import BatchNormalization\n",
+    "from keras.layers import Conv2D, UpSampling2D, InputLayer, Conv2DTranspose, Input, Reshape, merge, concatenate, Activation, Dense, Dropout, Flatten\n",
+    "from tensorflow.keras.layers import BatchNormalization\n",
     "from keras.callbacks import TensorBoard \n",
     "from keras.models import Sequential, Model\n",
     "from keras.layers.core import RepeatVector, Permute\n",
     "from keras.preprocessing.image import ImageDataGenerator, array_to_img, img_to_array, load_img\n",
+    "from keras import optimizers\n",
+    "from keras.models import model_from_json\n",
     "from skimage.color import rgb2lab, lab2rgb, rgb2gray, gray2rgb\n",
+    "from keras.callbacks import ModelCheckpoint\n",
     "from skimage.transform import resize\n",
     "from skimage.io import imsave\n",
-    "import numpy as np\n",
-    "import os\n",
-    "import random\n",
-    "import tensorflow as tf"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "FileNotFoundError",
-     "evalue": "[WinError 3] The system cannot find the path specified: 'Train/'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-2-51a175f7ce48>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m# Get images\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[0mX\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m \u001b[1;32mfor\u001b[0m \u001b[0mfilename\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mos\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mlistdir\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'Train/'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      4\u001b[0m     \u001b[0mX\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mimg_to_array\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mload_img\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'Train/'\u001b[0m\u001b[1;33m+\u001b[0m\u001b[0mfilename\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[0mX\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0marray\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mX\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdtype\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mfloat\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mFileNotFoundError\u001b[0m: [WinError 3] The system cannot find the path specified: 'Train/'"
-     ]
-    }
-   ],
-   "source": [
-    "# Get images\n",
-    "X = []\n",
-    "for filename in os.listdir('Train/'):\n",
-    "    X.append(img_to_array(load_img('Train/'+filename)))\n",
-    "X = np.array(X, dtype=float)\n",
-    "Xtrain = 1.0/255*X\n",
     "\n",
+    "session = keras.backend.get_session()\n",
     "\n",
-    "#Load weights\n",
-    "inception = InceptionResNetV2(weights='imagenet', include_top=True)\n",
-    "inception.graph = tf.get_default_graph()"
+    "print(\"Python version\",sys.version)\n",
+    "print (\"keras version\", keras.__version__)\n",
+    "print (\"tensorflow version\", tf.__version__)\n",
+    "print (\"numpy version\", np.__version__)\n",
+    "print(\"Eager mode\", tf.executing_eagerly())"
    ]
   },
   {
@@ -73,6 +42,47 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "# Get images\n",
+    "X = []\n",
+    "for filename in os.listdir('../data/Train/'):\n",
+    "    X.append(img_to_array(load_img('../data/Train/'+filename)))\n",
+    "X = np.array(X, dtype=float)\n",
+    "Xtrain = 1.0/255*X\n",
+    "\n",
+    "tf.compat.v1.disable_eager_execution()\n",
+    "# print(\"Eager mode\", tf.executing_eagerly())\n",
+    "\n",
+    "#Load weights\n",
+    "inception = InceptionResNetV2(weights='imagenet', include_top=True)\n",
+    "inception.graph = tf.compat.v1.get_default_graph()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# load json and create model\n",
+    "json_file = open('model_colorme.json', 'r')\n",
+    "loaded_model_json = json_file.read()\n",
+    "json_file.close()\n",
+    "model = model_from_json(loaded_model_json)\n",
+    "\n",
+    "optz = tf.optimizers.Adam(lr=0.00001)\n",
+    "#optz = tf.optimizers.rmsprop(lr=0.00001)\n",
+    "model.compile(optimizer=optz, loss='mse', metrics=['acc'])\n",
+    "model.summary()\n",
+    "\n",
+    "# load weights into new model\n",
+    "model.load_weights(\"colorme_weight11.h5\",by_name=True)\n",
+    "print(\"Loaded weights from checkpoint\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "embed_input = Input(shape=(1000,))\n",
     "\n",
@@ -103,7 +113,19 @@
     "decoder_output = Conv2D(2, (3, 3), activation='tanh', padding='same')(decoder_output)\n",
     "decoder_output = UpSampling2D((2, 2))(decoder_output)\n",
     "\n",
-    "model = Model(inputs=[encoder_input, embed_input], outputs=decoder_output)"
+    "model = Model(inputs=[encoder_input, embed_input], outputs=decoder_output)\n",
+    "model.summary()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "filepath=\"weights-improvement-{epoch:02d}-{loss:.2f}.hdf5\"\n",
+    "checkpoint = ModelCheckpoint(filepath, monitor='acc', verbose=1, save_best_only=True, mode='max')\n",
+    "callbacks_list = [checkpoint]"
    ]
   },
   {
@@ -119,8 +141,9 @@
     "        grayscaled_rgb_resized.append(i)\n",
     "    grayscaled_rgb_resized = np.array(grayscaled_rgb_resized)\n",
     "    grayscaled_rgb_resized = preprocess_input(grayscaled_rgb_resized)\n",
-    "    with inception.graph.as_default():\n",
-    "        embed = inception.predict(grayscaled_rgb_resized)\n",
+    "    with session.as_default():\n",
+    "        with inception.graph.as_default():\n",
+    "            embed = inception.predict(grayscaled_rgb_resized)\n",
     "    return embed\n",
     "\n",
     "# Image transformer\n",
@@ -131,7 +154,7 @@
     "        horizontal_flip=True)\n",
     "\n",
     "#Generate training data\n",
-    "batch_size = 10\n",
+    "batch_size = 5\n",
     "\n",
     "def image_a_b_gen(batch_size):\n",
     "    for batch in datagen.flow(Xtrain, batch_size=batch_size):\n",
@@ -141,12 +164,30 @@
     "        X_batch = lab_batch[:,:,:,0]\n",
     "        X_batch = X_batch.reshape(X_batch.shape+(1,))\n",
     "        Y_batch = lab_batch[:,:,:,1:] / 128\n",
-    "        yield ([X_batch, create_inception_embedding(grayscaled_rgb)], Y_batch)\n",
-    "\n",
-    "\n",
-    "#Train model      \n",
-    "model.compile(optimizer='rmsprop', loss='mse')\n",
-    "model.fit_generator(image_a_b_gen(batch_size), epochs=1, steps_per_epoch=1)"
+    "        yield ([X_batch, create_inception_embedding(grayscaled_rgb)], Y_batch)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Train model\n",
+    "model.fit(image_a_b_gen(batch_size), epochs=2, steps_per_epoch=5, callbacks=callbacks_list, verbose=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Save model\n",
+    "model_json = model.to_json()\n",
+    "with open(\"model_colorme.json\", \"w\") as json_file:\n",
+    "    json_file.write(model_json)\n",
+    "model.save_weights(\"colorme_weight12.h5\")"
    ]
   },
   {
@@ -156,8 +197,8 @@
    "outputs": [],
    "source": [
     "color_me = []\n",
-    "for filename in os.listdir('Test/'):\n",
-    "    color_me.append(img_to_array(load_img('Test/'+filename)))\n",
+    "for filename in os.listdir('../data/Test/'):\n",
+    "    color_me.append(img_to_array(load_img('../data/Test/'+filename)))\n",
     "color_me = np.array(color_me, dtype=float)\n",
     "gray_me = gray2rgb(rgb2gray(1.0/255*color_me))\n",
     "color_me_embed = create_inception_embedding(gray_me)\n",
@@ -194,7 +235,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
