--- a/Delta-version/full_version.ipynb
+++ b/Delta-version/full_version.ipynb
@@ -34,7 +34,15 @@
     "print (\"keras version\", keras.__version__)\n",
     "print (\"tensorflow version\", tf.__version__)\n",
     "print (\"numpy version\", np.__version__)\n",
-    "print(\"Eager mode\", tf.executing_eagerly())"
+    "print(\"Eager mode\", tf.executing_eagerly())\n",
+    "\n",
+    "from tensorflow.python.client import device_lib\n",
+    "print(device_lib.list_local_devices())\n",
+    "\n",
+    "if tf.test.gpu_device_name():\n",
+    "    print('Default GPU Device: {}'.format(tf.test.gpu_device_name()))\n",
+    "else:\n",
+    "    print(\"Please install GPU version of TF\")"
    ]
   },
   {
@@ -76,7 +84,7 @@
     "model.summary()\n",
     "\n",
     "# load weights into new model\n",
-    "model.load_weights(\"colorme_weight11.h5\",by_name=True)\n",
+    "model.load_weights(\"colorme_weight15.h5\",by_name=True)\n",
     "print(\"Loaded weights from checkpoint\")"
    ]
   },
@@ -174,7 +182,7 @@
    "outputs": [],
    "source": [
     "#Train model\n",
-    "model.fit(image_a_b_gen(batch_size), epochs=2, steps_per_epoch=5, callbacks=callbacks_list, verbose=1)"
+    "model.fit(image_a_b_gen(batch_size), epochs=1000, steps_per_epoch=20, callbacks=callbacks_list, verbose=1)"
    ]
   },
   {
@@ -187,7 +195,7 @@
     "model_json = model.to_json()\n",
     "with open(\"model_colorme.json\", \"w\") as json_file:\n",
     "    json_file.write(model_json)\n",
-    "model.save_weights(\"colorme_weight12.h5\")"
+    "model.save_weights(\"colorme_weight16.h5\")"
    ]
   },
   {
@@ -235,7 +243,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.10.2"
   }
  },
  "nbformat": 4,
