--- a/Delta-version/full_version.ipynb
+++ b/Delta-version/full_version.ipynb
@@ -182,7 +182,7 @@
    "outputs": [],
    "source": [
     "#Train model\n",
-    "model.fit(image_a_b_gen(batch_size), epochs=1000, steps_per_epoch=20, callbacks=callbacks_list, verbose=1)"
+    "history = model.fit(image_a_b_gen(batch_size), epochs=1000, steps_per_epoch=20, callbacks=callbacks_list, verbose=1)"
    ]
   },
   {
