--- a/Delta-version/full_version.ipynb
+++ b/Delta-version/full_version.ipynb
@@ -163,7 +163,7 @@
     "        horizontal_flip=True)\n",
     "\n",
     "#Generate training data\n",
-    "batch_size = 20\n",
+    "batch_size = 40\n",
     "\n",
     "def image_a_b_gen(batch_size):\n",
     "    for batch in datagen.flow(Xtrain, batch_size=batch_size):\n",
@@ -183,7 +183,7 @@
    "outputs": [],
    "source": [
     "#Train model\n",
-    "history = model.fit(image_a_b_gen(batch_size), epochs=5000, steps_per_epoch=5, callbacks=callbacks_list, verbose=1)\n",
+    "history = model.fit(image_a_b_gen(batch_size), epochs=10, steps_per_epoch=125, callbacks=callbacks_list, verbose=1)\n",
     "\n",
     "# Save model\n",
     "model_json = model.to_json()\n",
@@ -242,8 +242,11 @@
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "d3e10ef16274dd72e574b8fa73b58450b957d8421a2901baded3cca26fcf5dda"
+  },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.10.2 64-bit",
    "language": "python",
    "name": "python3"
   },
