--- a/Delta-version/load-model_colorme.ipynb
+++ b/Delta-version/load-model_colorme.ipynb
@@ -45,20 +45,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Get images\n",
-    "X = []\n",
-    "for filename in os.listdir('../data/Train/'):\n",
-    "    X.append(img_to_array(load_img('../data/Train/'+filename)))\n",
-    "X = np.array(X, dtype=float)\n",
-    "Xtrain = 1.0/255*X"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "tf.compat.v1.disable_eager_execution()\n",
     "# print(\"Eager mode\", tf.executing_eagerly())\n",
     "#Load weights\n",
@@ -87,19 +73,8 @@
     "\n",
     "# load weights into new model\n",
     "#model.load_weights(\"model.h5\")\n",
-    "model.load_weights(\"colorme_weight11.h5\",by_name=True)\n",
+    "model.load_weights(\"colorme_weight16.h5\",by_name=True)\n",
     "print(\"Loaded weights from checkpoint\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "filepath=\"weights-improvement-{epoch:02d}-{loss:.2f}.hdf5\"\n",
-    "checkpoint = ModelCheckpoint(filepath, monitor='acc', verbose=1,save_best_only=True,mode='max')\n",
-    "callbacks_list = [checkpoint]"
    ]
   },
   {
@@ -119,27 +94,7 @@
     "    with session.as_default():\n",
     "        with inception.graph.as_default():\n",
     "            embed = inception.predict(grayscaled_rgb_resized)\n",
-    "    return embed\n",
-    "\n",
-    "# Image transformer\n",
-    "datagen = ImageDataGenerator(\n",
-    "        shear_range=0.4,\n",
-    "        zoom_range=0.4,\n",
-    "        rotation_range=40,\n",
-    "        horizontal_flip=True)\n",
-    "\n",
-    "#Generate training data\n",
-    "batch_size = 5\n",
-    "\n",
-    "def image_a_b_gen(batch_size):\n",
-    "    for batch in datagen.flow(Xtrain, batch_size=batch_size):\n",
-    "        grayscaled_rgb = gray2rgb(rgb2gray(batch))\n",
-    "        embed = create_inception_embedding(grayscaled_rgb)\n",
-    "        lab_batch = rgb2lab(batch)\n",
-    "        X_batch = lab_batch[:,:,:,0]\n",
-    "        X_batch = X_batch.reshape(X_batch.shape+(1,))\n",
-    "        Y_batch = lab_batch[:,:,:,1:] / 128\n",
-    "        yield ([X_batch, create_inception_embedding(grayscaled_rgb)], Y_batch)"
+    "    return embed\n"
    ]
   },
   {
@@ -148,15 +103,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Train model\n",
-    "model.fit(image_a_b_gen(batch_size), epochs=100, steps_per_epoch=200, callbacks=callbacks_list, verbose=1)\n",
-    "\n",
-    "# Save model\n",
-    "model_json = model.to_json()\n",
-    "with open(\"model_colorme.json\", \"w\") as json_file:\n",
-    "    json_file.write(model_json)\n",
-    "model.save_weights(\"colorme_weight12.h5\")\n",
-    "\n",
     "#Make predictions on validation images\n",
     "color_me = []\n",
     "for filename in os.listdir('../data/Test/'):\n",
@@ -189,8 +135,11 @@
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "d3e10ef16274dd72e574b8fa73b58450b957d8421a2901baded3cca26fcf5dda"
+  },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.10.2 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -204,7 +153,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.10.2"
   }
  },
  "nbformat": 4,
